    * Unchanged file streams are now 2-byte, backwards compatible, sequences
      instead of more complex representations of "nothing changed"
    * Commit code (both client and server) recognize unchanged files and
      don't merge stream sets for them.
    * Distributed changeset creation no longer recompresses file contents

  o Client Changes:
    * Added getTroveLatestByLabel as a client-side call
    * Most repository exceptions are demarshalled using logic in the
      exception class itself rather than in a large if/elif block (CNY-747)
    * troveNames and troveNamesByServer methods now accept a troveTypes
      argument and return present troves only by default (CNY-1838)
    * the mirror client supports a --fast-sync flag which will only
      scan for new troves in the source and skip the time-expensive
      scans for changed trove info records (CNY-1756)
    * the mirror client supports a --absolute flag which will make it
      use only absolute changesets to mirror content (CNY-1755)
    * 'cvc shadow' now commits relative changesets when the shadow is
      made to the same repository as the original trove
    * Reworked promote changesets to be relative to either the source of
      the promote (if promoting within a server) or to the current version
      on the target (CNY-2202)
    * Promote no longer recompresses non-config files during changeset
      assembly (CNY-2202)
    * Promote now gets file contents and streams from changesets when a
      lot of them are needed from the same trove (CNY-2022)
    * Split rollback stack code into a separate class (CNY-2061)
    * Added rmrollback command to remove old rollbacks (CNY-2061)
    * Rollback objects now have isLocal() method (CNY-2077)
    * cvc promote now uses the labels and branches specified in the
      "from" section of any promote as the place to search for packages
      (CNY-2235).
    * Conary now allows a biarch system to have one flavor that expresses